gcc/testsuite/rust/rustc/ui/suggestions/issue-99240-2.rs
enum Enum {
    Unit,
}
type Alias = Enum;

fn main() {
    Alias::
    Unit();
// { dg-error ".E0618." "" { target *-*-* } .-2 }
}

